updates to frontend

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CapstoneFrontend</title>
+  <title>Solar Calculator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,6 +11,6 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
-  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyByNviuEwDf3OBfNzEV_Oze_sGfS-NXQcE&libraries=drawing,places,geometry"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByNviuEwDf3OBfNzEV_Oze_sGfS-NXQcE&libraries=drawing,places,geometry"></script>
 </body>
 </html>
